--- a/src/resources/schttable.properties
+++ b/src/resources/schttable.properties
@@ -1,5 +1,5 @@
 global.dir.html = /home/By_syk/SchTtable/html
-global.dir.html.debug = E:/JavaWebProjects/SchTtable/reserve/html
+global.dir.html.debug = E:/JavaWebProjects/SchTtableServer/reserve/html
 
 # 成都理工大学
 # Chengdu University of Technology
@@ -11,14 +11,22 @@ cdut.grade = /SearchInfo/Score/ScoreList.aspx
 
 # 东北大学秦皇岛分校
 # Northeastern University at Qinhuangdao
+# neuq.schoolcode = 19145
+# neuq.host = http://jwpt.neuq.edu.cn
+# neuq.index = /index.jsp
+# neuq.login = /ACTIONLOGON.APPPROCESS
+# neuq.graphicc = /ACTIONVALIDATERANDOMPICTURE.APPPROCESS
+# neuq.courses = /ACTIONQUERYSTUDENTSCHEDULEBYSELF.APPPROCESS
+# neuq.term = 20161
+# neuq.weekorder1startdate = 20160905
 neuq.schoolcode = 19145
-neuq.host = http://jwpt.neuq.edu.cn
-neuq.index = /index.jsp
-neuq.login = /ACTIONLOGON.APPPROCESS
-neuq.graphicc = /ACTIONVALIDATERANDOMPICTURE.APPPROCESS
-neuq.courses = /ACTIONQUERYSTUDENTSCHEDULEBYSELF.APPPROCESS
-neuq.term = 20161
-neuq.weekorder1startdate = 20160905
+neuq.host = http://jwxt.neuq.edu.cn
+neuq.index = 
+neuq.login = /xtgl/login_cxCheckYh.html
+neuq.login1 = /xtgl/login_login.html
+neuq.courses = /kbcx/xskbcx_cxXskbcxIndex.html
+neuq.term = 20162
+neuq.weekorder1startdate = 20170227
 
 # 辽东学院
 # Eastern Liaoning University
@@ -50,8 +58,8 @@ cmc.index =
 cmc.login = /default2.aspx
 cmc.graphicc = /CheckCode.aspx
 cmc.home = /xs_main.aspx
-cmc.term = 20161
-cmc.weekorder1startdate = 20160905
+cmc.term = 20162
+cmc.weekorder1startdate = 20170227
 cmc.daycoursenum = 13
 
 # 四川理工学院
@@ -76,14 +84,15 @@ suse.weekorder1startdate = 20160905
 
 # 南京大学
 # Nanjing University
+nju.schoolcode = 10284
 nju.host = http://jw.nju.edu.cn:8080/jiaowu
 nju.index = 
 nju.login = /login.do
 nju.userinfo = /student/studentinfo/studentinfo.do
 nju.courses = /student/teachinginfo/courseList.do
-nju.term = 20161
-nju.weekorder1startdate = 20160829
-nju.weeks = 19
+nju.term = 20162
+nju.weekorder1startdate = 20170220
+nju.weeks = 20
 nju.daycoursenum = 11
 
 # 广东海洋大学
