--- a/src/resources/schttable.properties
+++ b/src/resources/schttable.properties
@@ -56,10 +56,22 @@ nju.daycoursenum = 11
 # 广东海洋大学
 # Guangdong Ocean University
 gdou.schoolcode = 10566
-gdou.host = http://210.38.137.126:8016
+gdou.host = http://210.38.137.125:8016
 gdou.index = /default2.aspx
 gdou.login = /default2.aspx
 gdou.graphicc = /CheckCode.aspx
 gdou.home = /xs_main.aspx
 gdou.term = 20162
 gdou.weekorder1startdate = 20170220
+
+# 南昌大学
+# Nanchang University
+ncu.schoolcode = 10403
+ncu.host = http://218.64.56.18/jsxsd
+ncu.index = /
+ncu.login = /xk/LoginToXk
+ncu.graphicc = /verifycode.servlet
+ncu.userinfo = /grxx/xsxx
+ncu.courses = /xskb/xskb_list.do
+ncu.term = 20162
+ncu.weekorder1startdate = 20170213
